RESOLVED FIXED35892
REGRESSION(r55684): branch8 and branchTest8 should be implemented on all platform
https://bugs.webkit.org/show_bug.cgi?id=35892
Summary REGRESSION(r55684): branch8 and branchTest8 should be implemented on all plat...
Csaba Osztrogonác
Reported 2010-03-08 15:50:27 PST
http://trac.webkit.org/changeset/55684 broke ARM build, because only x86 macroassembler implement the new functions: branch8 and branchTest8. They should be also implemented by ARM macroassembler and MIPS macroassembler as soon as possible.
Attachments
Buildfix for Thumb2 after r55684. Add branch8 and branchTest8 functions. (8.23 KB, patch)
2010-03-09 04:47 PST, Gabor Loki
barraclough: review+
Csaba Osztrogonác
Comment 1 2010-03-09 02:35:11 PST
Gabor Loki
Comment 2 2010-03-09 04:47:43 PST
Created attachment 50293 [details] Buildfix for Thumb2 after r55684. Add branch8 and branchTest8 functions.
Gavin Barraclough
Comment 3 2010-03-10 21:40:34 PST
Comment on attachment 50293 [details] Buildfix for Thumb2 after r55684. Add branch8 and branchTest8 functions. // use addressTempRegister incase the branchTest32 we call uses dataTempRegister. :-/ Copy & pasted comment, 'branchTest32' should be 'branchTest8' in this case. The code all looks great, r=me.
Gabor Loki
Comment 4 2010-03-10 23:57:52 PST
Thumb2 was fixed in http://trac.webkit.org/changeset/55834 . MIPS will be fixed at bug 30144 (currently JIT is not enabled). So, we can close this bug.
Note You need to log in before you can comment on or make changes to this bug.