Rubber-stamped by Maciej Stachowiak.

Buildfix for ARM after r55684. Add branch8 and branchTest8 functions.
https://bugs.webkit.org/show_bug.cgi?id=35892

* assembler/ARMAssembler.cpp:
(JSC::ARMAssembler::dataTransfer32):
* assembler/ARMAssembler.h:
(JSC::ARMAssembler::):
* assembler/MacroAssemblerARM.h:
(JSC::MacroAssemblerARM::load8):
(JSC::MacroAssemblerARM::branch8):
(JSC::MacroAssemblerARM::branchTest8):



Canonical link: https://commits.webkit.org/47015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55718 268f45cc-cd09-0410-ab3c-d52691b4dbfc